Add bet routes
